fix some mobile styling issues and weird truncation that is unnecessary when media queries could be leveraged; also removed 3rd party mathjax hackiness since there is an npm module that is far easier to use

--- a/source/css/main.styl
+++ b/source/css/main.styl
@@ -537,7 +537,7 @@ a.category-link {
     font-size: 24px;
   }
   .single #lx-aside .page-title h2 {
-    font-size: 40px;
+    font-size: 32px;
   }
   h2.pagehead {
     padding: 20px 0px 0px 30px;
@@ -565,5 +565,6 @@ a.category-link {
     left: 90%;
   }
 }
+
 @import "menu/menu";
 @import "page_style/page_style";
